--- a/includes/header.html
+++ b/includes/header.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WPE - Water, Public Health and Environment</title>
+    <title>WPE - Water, Public Health and Environmental Engineering</title>
     <!-- Font imports -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="images/logo.png" alt="WPE Logo">
+                <img src="images/wpe_logo_colour.png" alt="WPE Logo">
                 <h1>WPE</h1>
             </div>
             <nav>
