--- a/includes/header.html
+++ b/includes/header.html
@@ -29,7 +29,7 @@
                     <li><a href="people.html" id="nav-people">People</a></li>
                     <li><a href="facilities.html" id="nav-facilities">Facilities</a></li>
                     <li><a href="cake-meetings.html" id="nav-cake">Cake Meetings</a></li>
-                    <li><a href="news-events.html" id="nav-news">News & Events</a></li>
+                    <li><a href="news-blog.html" id="nav-news">News & Blog</a></li>
                     <li><a href="contact.html" id="nav-contact">Contact</a></li>
                 </ul>
             </nav>
@@ -60,7 +60,7 @@
             document.getElementById('nav-facilities').classList.add('active');
         } else if (page === "cake-meetings.html") {
             document.getElementById('nav-cake').classList.add('active');
-        } else if (page === "news-events.html") {
+        } else if (page === "news-blog.html") {
             document.getElementById('nav-news').classList.add('active');
         } else if (page === "contact.html") {
             document.getElementById('nav-contact').classList.add('active');
