header to static

--- a/includes/header.html
+++ b/includes/header.html
@@ -18,7 +18,7 @@
     <header>
         <div class="header-container">
             <div class="logo">
-                <img src="images/wpe.png" alt="WPE Logo">
+                <img src="images/wpe_logo_colour.png" alt="WPE Logo">
                 <h1>WPE</h1>
             </div>
             <nav>
