--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,7 +3,7 @@
         <div class="footer-container">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <img src="images/wpe_logo.png" alt="WPE Logo">
+                    <img src="images/wpe_logo_black.png" alt="WPE Logo">
                     <h3>WPE</h3>
                 </div>
                 <p>Water, Public Health and Environmental Engineering Research Group</p>
@@ -14,6 +14,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="research-groups.html">Research Groups</a></li>
+                    <li><a href="news-blog.html">News & Blog</a></li>
                     <li><a href="people.html">People</a></li>
                     <li><a href="facilities.html">Facilities</a></li>
                 </ul>
