removed include header and footer

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -3,7 +3,7 @@
         <div class="footer-container">
             <div class="footer-section">
                 <div class="footer-logo">
-                    <img src="images/wpe_logo_black.png" alt="WPE Logo">
+                    <img src="images/wpe_logo_colour.png" alt="WPE Logo">
                     <h3>WPE</h3>
                 </div>
                 <p>Water, Public Health and Environmental Engineering Research Group</p>
@@ -39,5 +39,3 @@
             &copy; <script>document.write(new Date().getFullYear())</script> Water, Public Health and Environmental Engineering  Research Group. All rights reserved.
         </div>
     </footer>
-</body>
-</html>
